--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     
-    <title>Integra-Bartercard</title>
+    <title>BBX UC8</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
